deploy/base/zio-node/ehrbase-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zio-ehrbase
  namespace: dh-health
  labels:
    app: zio-ehrbase
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zio-ehrbase
  template:
    metadata:
      labels:
        app: zio-ehrbase
    spec:
      containers:
      - name: zio-ehrbase
        image: ehrbase/ehrbase:2.6.0
        ports:
        - containerPort: 8080
        command:
          - "java"
        args:
          - "-jar"
          - "-Dspring.profiles.active=docker"
          - "-Dlogging.file.name=/tmp/ehrbaselog/ehrbase.log"
          - "ehrbase.jar"
        volumeMounts:
        - name: logs
          mountPath: /tmp/ehrbaselog/ehrbase.log
        livenessProbe:
          httpGet:
            path: /ehrbase/management/health
            port: 8080
          initialDelaySeconds: 90
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 6
        readinessProbe:
          httpGet:
            path: /ehrbase/management/health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
      volumes:
      - name: logs
        hostPath:
          path: /mnt/filebeat/logs/zio/ehrbase/ehrbase.log
