deploy/base/zio-node/ehrdb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zio-ehrdb
  namespace: dh-health
  labels:
    app: zio-ehrdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zio-ehrdb
  template:
    metadata:
      labels:
        app: zio-ehrdb
    spec:
      containers:
      - name: zio-ehrdb
        image: ehrbase/ehrbase-v2-postgres:16.2
        ports:
        - containerPort: 5432
        args:
        - postgres
        - -c
        - logging_collector=on
        - -c
        - log_directory=/tmp/postgreslog/
        - -c
        - log_filename=postgresql.log
        - -c
        - log_statement=none
        - -c
        - log_file_mode=0777
        - -c
        - log_rotation_age=0
        - -c
        - log_rotation_size=0
        livenessProbe:
          exec:
            command:
            - pg_isready
            - -U
            - postgres
          initialDelaySeconds: 30
          periodSeconds: 10
