deploy/base/zio-node/ehrbase-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zio-ehrbase
  namespace: dh-health
spec:
  selector:
    app: zio-ehrbase
  ports:
  - port: 8080
    targetPort: 8080
    name: http
  type: ClusterIP
