deploy/base/zio-node/portal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zio-portal
  namespace: dh-health
spec:
  selector:
    app: zio-portal
  ports:
  - port: 3000
    targetPort: 3000
    name: http
  type: ClusterIP
